--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,23 +2,42 @@
     
 }
 
+header, .grid, footer {
+    max-width: 840px;
+    margin: 0 auto;
+  }
+
 nav {
     background-color: darkblue;
     padding: 10px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    font-size: 1.2rem;
+    font-weight: 700;
 }
 
 nav a {
     color: white;
     display: block;
     padding: 20px;
+    text-decoration: none;
+
 }
 
 h1 {
     color: darkblue;
+    border-bottom: 1px solid green;
+}
+
+.grid {
+    display: grid;
+    align-items: center;
 }
 
 main {
-    max-width: 840px;
+    grid-column: 2/3;
+    margin: 1rem;
 }
 
 main img {
@@ -41,6 +60,9 @@ aside {
     background-color: #eee;
     color: #333;
     text-align: center;
+    position: relative;
+    grid-column: 1/2;
+    grid-row: 1/2;
 }
 
 aside img {
@@ -49,7 +71,8 @@ aside img {
 }
 
 footer {
-    margin-top: 15px;
+    max-width: 840px;
+    margin: 0 auto;
     border-top: 1px solid #000;
     text-align: center;
 }
