--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -30,14 +30,15 @@ main {
     max-width: 840px;
 }
 
-.herodiv {
-	margin: 10px auto;
-    padding: 15px;
+.hero {
+	/* margin: 10px auto;
+    padding: 15px; */
+    display: block;
 	position: relative;
 }
 
 
-.stats {
+/* .stats {
     position: absolute;
     bottom: 25px;
 	left: 15px;
@@ -45,24 +46,37 @@ main {
 	border: 1px solid #000;
 	padding: 0.65rem;
 	box-shadow: 0 0 30px #111;
-	opacity: 0.9;
-}
+	opacity: 0.9; */
+
 
 .hero img {
     display: block;
     width: 100%;
-    max-width: 850px;
-    margin: auto;
-    position: relative;
+    height: auto;
 }
 
+h1 {
+    position: absolute;
+    background-color: whitesmoke;
+    opacity: .55;
+    top: 3%;
+    left: 25%;
+    }
+    
+article {
+    display: block;
+    position: absolute;
+    background-color: whitesmoke;
+    opacity: .55;
+    top: 20%;
+    left: 10%;
+}
 
 article img {
-    display: block;
+    /* display: block; */
     float: right;
-    width: 150px;
+    max-width: 150px;
 	height: auto;
-    position: absolute;
 }
  
 
