about.html-update

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -73,7 +73,7 @@ article {
 }
 
 article img {
-    /* display: block; */
+    display: block;
     float: right;
     max-width: 150px;
 	height: auto;
